--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="./animator.js"></script>
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./Lance.js"></script>
-    <!-- <script type="text/javascript" src="./scenemanager.js"></script> -->
+    <script type="text/javascript" src="./scenemanager.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <!-- <script type="text/javascript" src="./boundingbox.js"></script> -->
     <script type="text/javascript" src="./main.js"></script>
