--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./animator.js"></script>
+    <script type="text/javascript" src="./boundingbox.js"></script>
     <script type="text/javascript" src="./background.js"></script>
+    <script type="text/javascript" src="./ground.js"></script>
     <script type="text/javascript" src="./Lance.js"></script>
     <script type="text/javascript" src="./scenemanager.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <!-- <script type="text/javascript" src="./boundingbox.js"></script> -->
     <script type="text/javascript" src="./main.js"></script>
+
 </head>
 <body>
     <div>
