--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         body {
             font-family: serif;
             font-size: 24px;
+            background-image: url("backgrounds/sinus.png");
+            color: white;
+            background-color: black;
+            background-repeat:repeat;
         }
         canvas {
             padding-left: 0;
@@ -16,6 +20,8 @@
             margin-right: auto;
             display: block;
             font-size: 20px;
+            border: 2px #222 solid;
+            box-shadow: 0px 0px 5px 5px rgb(255, 255, 255);
         }
         div {
             text-align: center;
