--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Kontra: With a K</title>
     <style>
-        body {
-            font-family: serif;
-            font-size: 24px;
-            background-image: url("backgrounds/sinus.png");
-            color: white;
-            background-color: black;
-            background-repeat:repeat;
-        }
-        canvas {
-            padding-left: 0;
-            padding-right: 0;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-            font-size: 20px;
-            border: 2px #222 solid;
-            box-shadow: 0px 0px 5px 5px rgb(255, 255, 255);
-        }
-        div {
-            text-align: center;
-        }
+      body {
+        font-family: serif;
+        font-size: 24px;
+        background-image: url("backgrounds/sinus.png");
+        color: white;
+        background-color: black;
+        background-repeat: repeat;
+      }
+      canvas {
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        font-size: 20px;
+        border: 2px #222 solid;
+        box-shadow: 0px 0px 5px 5px rgb(255, 255, 255);
+      }
+      div {
+        text-align: center;
+      }
     </style>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
@@ -34,15 +34,24 @@
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./ground.js"></script>
     <script type="text/javascript" src="./Lance.js"></script>
+    <script type="text/javascript" src="./Bullet.js"></script>
+    <script type="text/javascript" src="./Soldier.js"></script>
     <script type="text/javascript" src="./scenemanager.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./main.js"></script>
-
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <br>Kontra: With a K<br /> <br>
+      <br />Kontra: With a K<br />
+      <br />
     </div>
-    <canvas id="gameWorld" width="768" height="768" style="background: #000000;" tabindex ="0" autofocus></canvas>
-</body>
+    <canvas
+      id="gameWorld"
+      width="768"
+      height="768"
+      style="background: #000000"
+      tabindex="0"
+      autofocus
+    ></canvas>
+  </body>
 </html>
