--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <script type="text/javascript" src="./boundingbox.js"></script>
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./ground.js"></script>
-    <script type="text/javascript" src="./Lance.js"></script>
-    <script type="text/javascript" src="./Bullet.js"></script>
-    <script type="text/javascript" src="./Soldier.js"></script>
+    <script type="text/javascript" src="./lance.js"></script>
+    <script type="text/javascript" src="./bullet.js"></script>
+    <script type="text/javascript" src="./soldier.js"></script>
     <script type="text/javascript" src="./scenemanager.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./main.js"></script>
