--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script type="text/javascript" src="./boundingbox.js"></script>
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./ground.js"></script>
-    <script type="text/javascript" src="./lance.js"></script>
+    <script type="text/javascript" src="./Lance.js"></script>
     <script type="text/javascript" src="./bullet.js"></script>
     <script type="text/javascript" src="./soldier.js"></script>
     <script type="text/javascript" src="./scenemanager.js"></script>
