--- a/index.html
+++ b/index.html
@@ -53,5 +53,7 @@
       tabindex="0"
       autofocus
     ></canvas>
+    <br />
+    <input type="checkbox" id="debug" checked="true" /> Debug <!-- <input type="checkbox" id="mute"> Mute <input type="range" id="volume" min="0" max="1" value="0.1" step="0.05"> Volume -->
   </body>
 </html>
