--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script type="text/javascript" src="./Lance.js"></script>
     <script type="text/javascript" src="./bullet.js"></script>
     <script type="text/javascript" src="./soldier.js"></script>
+    <script type="text/javascript" src="./levels.js"></script>
     <script type="text/javascript" src="./scenemanager.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./main.js"></script>
