--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="./soldier.js"></script>
     <script type="text/javascript" src="./levels.js"></script>
     <script type="text/javascript" src="./scenemanager.js"></script>
+    <script type="text/javascript" src="./transition.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./main.js"></script>
   </head>
