--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script type="text/javascript" src="./Lance.js"></script>
     <script type="text/javascript" src="./bullet.js"></script>
     <script type="text/javascript" src="./soldier.js"></script>
+    <script type="text/javascript" src="./sniper.js"></script>
     <script type="text/javascript" src="./levels.js"></script>
     <script type="text/javascript" src="./scenemanager.js"></script>
     <script type="text/javascript" src="./util.js"></script>
@@ -55,6 +56,7 @@
       autofocus
     ></canvas>
     <br />
-    <input type="checkbox" id="debug" checked="true" /> Debug <!-- <input type="checkbox" id="mute"> Mute <input type="range" id="volume" min="0" max="1" value="0.1" step="0.05"> Volume -->
+    <input type="checkbox" id="debug" checked="true" /> Debug
+    <!-- <input type="checkbox" id="mute"> Mute <input type="range" id="volume" min="0" max="1" value="0.1" step="0.05"> Volume -->
   </body>
 </html>
