--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       autofocus
     ></canvas>
     <br />
-    <input type="checkbox" id="debug" checked="true" /> Debug
+    <input type="checkbox" id="debug"> Debug <input type="checkbox" id="mute"> Mute <input type="range" id="volume" min="0" max="1" value="0.1" step="0.05"> Volume
     <!-- <input type="checkbox" id="mute"> Mute <input type="range" id="volume" min="0" max="1" value="0.1" step="0.05"> Volume -->
   </body>
 </html>
