--- a/index.html
+++ b/index.html
@@ -25,6 +25,26 @@
       div {
         text-align: center;
       }
+
+      #controls, #goal  { /* display controls over canvas without affecting contents */
+        position: absolute;
+        top: 25px;
+        left: -250px;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        width: 200px;
+        height: 150px;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 5px 5px rgb(255, 255, 255);
+      }
+
+      #goal {
+        left: 250px;
+      }
     </style>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
@@ -57,6 +77,15 @@
       tabindex="0"
       autofocus
     ></canvas>
+    <div id="info">
+      <div id="controls">
+        <p>Controls<br/>
+        Arrow keys to move<br/><b>x</b> to jump<br/><b>z</b> to shoot</p>
+      </div>
+      <div id="goal">
+        <p>Goal<br/>Get to the end without dying!</p>
+      </div>
+    </div>
     <br />
     <input type="checkbox" id="debug"> Debug <input type="checkbox" id="mute"> Mute <input type="range" id="volume" min="0" max="1" value="0.1" step="0.05"> Volume
     <!-- <input type="checkbox" id="mute"> Mute <input type="range" id="volume" min="0" max="1" value="0.1" step="0.05"> Volume -->
