-added 2 player support to the game. will need to configure that in the options later

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./ground.js"></script>
     <script type="text/javascript" src="./Lance.js"></script>
+    <script type="text/javascript" src="./Lance2.js"></script>
     <script type="text/javascript" src="./bullet.js"></script>
     <script type="text/javascript" src="./soldier.js"></script>
     <script type="text/javascript" src="./sniper.js"></script>
