--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         top: 300px;
         left: 0px;
         z-index: 2;
-        width: 200px;
+        width: 250px;
         height: 400px;
         background-color: rgba(0, 0, 0, 0.5);
         color: white;
@@ -56,9 +56,11 @@
         text-align: center;
       }
 
-      p #info {
+      #info p {
         margin: 0;
         padding: 0;
+        padding-left: 5px;
+        text-align: center;
       }
     </style>
     <script type="text/javascript" src="./assetmanager.js"></script>
