-made minor tweaks to music and etc

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       <h2>Controls</h2>
       <p>Move: <b>Arrow Keys</b><br/>Jump: <b>x</b><br/>Drop: <b>Down</b> + <b>x</b><br>Fire: <b>z</b></p>
       <h2>Goal</h2><p>Get to the end without dying!</p>
+      <h2>Completion</h2><p>Once finished with all three level, refresh the tab to start again!</p>
     </div>
   </div>  
     </div>
