-made changes to levels and title screen font size

--- a/index.html
+++ b/index.html
@@ -98,10 +98,9 @@
     <!-- disable up/down window scrolling -->
     <script>document.getElementById("gameWorld").onkeydown = function (e) {if (e.key === 'ArrowUp' || e.key === 'ArrowDown') {e.view.event.preventDefault();}}</script>
     <div id="info">
-      <h2>Controls</h2>
-      <p>Move: <b>Arrow Keys</b><br/>Jump: <b>x</b><br/>Drop: <b>Down</b> + <b>x</b><br>Fire: <b>z</b></p>
-      <h2>Goal</h2><p>Get to the end without dying!</p>
-      <h2>Completion</h2><p>Once finished with all three level, refresh the tab to start again!</p>
+      <h6>Player 1 and 2 Controls</h6>
+      <h6>Move: <b>Arrow Keys/WASD</b><br/>Jump: <b>x/.</b><br/>Drop: <b>Down/S</b> + <b>x/.</b><br>Fire: <b>z/,</b></h6>
+      <h6>Goal</h6><h6>Get to the end without dying! Once finished with all three level, refresh the tab to start again!</h6>
     </div>
   </div>  
     </div>
